[tool.poetry]
name = "pyfwapi"
version = "0.2.2"
description = "Work with the Fotoware API in Python"
authors = ["Redmer Kronemeijer <12477216+redmer@users.noreply.github.com>"]
license = "mpl-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
authlib = "^1.3.1"
httpx = "^0.27.0"
pydantic = "^2.8.2"
aiolimiter = "^1.1.0"
aiostream = "^0.6.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
